--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -22,9 +22,9 @@
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet">
-                    <li class="active">
-                        <a href="./">Open-CTR-Benchmark</a>
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
+                    <!-- <li class="active">
+                        <a href="./index.html">Open-CTR-Benchmark</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
@@ -72,9 +72,8 @@
                     </li>
                     <li>
                         <a href="https://github.com/xue-pai/Open-CTR-Benchmark/issues/new" , target="_blank">Feedback</a>
-                    </li>
+                    </li> -->
                 </ul>
-
                 <div class='mb-5'>
                     <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork Github Repo
                     </button>
@@ -104,7 +103,9 @@
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script type="text/javascript" src="./js/nav.js"></script>
     <script type="text/javascript">
+        add_nav("Open-CTR-Benchmark");
         $(document).ready(function() {
             $("#fork-btn").click(function() {
                 location.href = "https://github.com/xue-pai/Open-CTR-Benchmark";
