--- a/ctr-prediction/leaderboard/criteo_x4_001.html
+++ b/ctr-prediction/leaderboard/criteo_x4_001.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -16,67 +18,18 @@
         <nav id="sidebar">
             <div class="custom-menu">
                 <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                  <i class="fa fa-bars"></i>
-                  <span class="sr-only">Toggle Menu</span>
+                    <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle Menu</span>
                 </button>
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet">
-                    <li class="active">
-                        <a href="../">Open-CTR-Benchmark</a>
-                    </li>
-                    <li>
-                        <a href="../models.html">Models</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets/README.md" , target="_blank">Datasets</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/toolkits.md" , target="_blank">Toolkits</a>
-                    </li>
-                    <li>
-                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benchmarking Results</a>
-                        <ul class="collapse list-unstyled" id="LeadBoard">
-                            <li>
-                                <a href="./criteo_x4_001.html">criteo_x4_001</a>
-                            </li>
-                            <li>
-                                <a href="./criteo_x4_002.html">criteo_x4_002</a>
-                            </li>
-                            <li>
-                                <a href="./criteo_x0_001.html">criteo_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./avazu_x4_001.html">avazu_x4_001</a>
-                            </li>
-                            <li>
-                                <a href="./avazu_x4_002.html">avazu_x4_002</a>
-                            </li>
-                            <li>
-                                <a href="./avazu_x0_001.html">avazu_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./kkbox_x4_001.html">kkbox_x4_001</a>
-                            </li>
-                            <li>
-                                <a href="./taobao_x0_001.html">taobao_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./microvideo1.7m_x0_001.html">microvideo1.7m_x0_001</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/issues/new" , target="_blank">Feedback</a>
-                    </li>
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
 
                 <div class='mb-5'>
-                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork Github Repo
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2"
+                        data-loading-text="Loading..." type="button"> Fork Github Repo
                     </button>
                 </div>
                 <!-- <div class="mb-5">
@@ -96,9 +49,12 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
 
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -112,9 +68,13 @@
         $(document).ready(createTableChart('table1', 'chart1',
             "https://cdn.jsdelivr.net/gh/xue-pai/Open-CTR-Benchmark/results/criteo_x4_001.json"));
     </script>
+    <script type="text/javascript" src="../js/nav.js"></script>
+
     <script type="text/javascript">
-        $(document).ready(function() {
-            $("#fork-btn").click(function() {
+        add_nav("criteo_x4_001");
+
+        $(document).ready(function () {
+            $("#fork-btn").click(function () {
                 location.href = "https://github.com/xue-pai/Open-CTR-Benchmark";
             });
         });
