--- a/ctr-prediction/leaderboard/avazu_x4_001.html
+++ b/ctr-prediction/leaderboard/avazu_x4_001.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS | Open-CTR-Benchmark</title>
+    <title>BARS-CTR-Prediction | avazu_x4_001</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -61,22 +61,17 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
     <script src="../js/tablecharts.js"></script>
-    <!-- <script type="text/javascript">
-        $(document).ready(createTableChart('table1', 'chart1',
-            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/avazu_x4_001.json"));
-    </script> -->
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/xue-pai/Open-CTR-Benchmark/results/avazu_x4_001.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/avazu_x4_001.json"));
     </script>
     <script type="text/javascript" src="../js/nav.js"></script>
 
     <script type="text/javascript">
         add_nav("avazu_x4_001");
-
         $(document).ready(function () {
             $("#fork-btn").click(function () {
-                location.href = "https://github.com/xue-pai/Open-CTR-Benchmark";
+                location.href = "https://github.com/xue-pai/BARS";
             });
         });
     </script>
