--- a/BARS/index.html
+++ b/BARS/index.html
@@ -33,44 +33,46 @@
                     <p> Openness is key to fostering progress in science. BARS is a project aimed for open <strong>B</strong>enchm<strong>A</strong>rking for <strong>R</strong>ecommender <strong>S</strong>ystems, allowing better reproducibility and replicability of quantitative studies. The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems. In summary, BARS is built with the following key features:</p>
 
                     <ul> 
-                        <li> <strong>Open datasets</strong>: BARS collects a set of widely-used public datasets for recommendation research, and assign unique dataset IDs to track specific data partitions of each dataset. This allows to share and experiment with the datasets in a uniform way. 
+                        <li> <strong>Open datasets</strong>: BARS collects a set of widely-used public datasets for recommendation research, and assign unique dataset IDs to track data partitions of each dataset. This allows to experiment with the datasets and share the results in a consistent way. 
                         </li>
 
-                        <li> <strong>Open-source code</strong>: BARS supports the open source principles and provides a list of open-source model implementations for recommendation research. 
+                        <li> <strong>Open source</strong>: BARS actively supports the open source principles and provides a list of open-source implementations of recommendation models. 
                         </li>
 
-                        <li> <strong>Benchmarking pipeline</strong>: BARS builds an open benchmarking pipeline to ensure transparency and availability of all artifacts produced at each investigative step. 
+                        <li> <strong>Benchmarking pipeline</strong>: BARS standardizes the open benchmarking pipeline for reproducible recommender systems research to ensure transparency and availability of all artifacts produced at each investigative step. 
                         </li>
 
-                        <li> <strong>Comprehensive results</strong>: BARS provides the most comprehensive benchmarking results to date, covering tens of SOTA models and tens of dataset partitions. These results could be easily reused for future research.
+                        <li> <strong>SOTA results</strong>: BARS provides the most comprehensive benchmarking results to date, covering tens of SOTA models and tens of dataset partitions. These results could be easily reused for future research.
                         </li>
   
-                        <li> <strong>Reproducing steps</strong>: The core of BARS is to ensure reproducibility of each benchmarking result through detailed recordings of the reproducing steps, following the open benchmarking pipeline. 
+                        <li> <strong>Reproducing steps</strong>: The core of BARS is to ensure reproducibility of each benchmarking result through detailed description of reproducing steps, which allows anyone in the community to easily reproduce the results.
                         </li>
 
-                        <li> <strong>Editable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, new models, or new benchmarking results through a pull request on Github. The contributor will be marked in the benchmark accordingly.
+                        <li> <strong>Updatable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, implement new models, update new benchmarking results, or revise existing numbers through a pull request on Github. The contributor will be marked honorably along with the benchmark accordingly.
                         </li>
                     </ul>
-
-                    <p>By setting up an open benchmarking standard, together with the freely available datasets, source code, and reproducing steps, we hope that the BARS project could benefit all researchers, practitioners, and educators in the community.</p>
+                    <br>
                 </div>
             </div>
             <div class="col-md-8 col-md-offset-2">
                 <img src="img/benchmark_pipeline.jpg" title="Open benchmarking pipeline">
-                <center>Figure: Open benchmarking pipeline</center>
+                <div class="text-center" style="font-size:16px">Figure: Open benchmarking pipeline</div>
+            </div>
+            <div class="col-lg-10 col-lg-offset-1">
+                <p>By establishing an open benchmarking standard, together with the freely available datasets, source code, and reproducing steps, we hope that the BARS project could benefit all researchers, practitioners, and educators in the community. Currently, the BARS benchmark covers the following two tasks:</p>
             </div>
         </div>
-        <!-- /.container -->
 
-</section>
 
 <main class="landing">
-<div id="buttons" style="opacity: 1">
-<a title="Open Benchmarking for CTR Prediction." class=btn href=https://openbenchmark.github.io/ctr-prediction>Open-CTR-Benchmark</a>
-<a title="Open Benchmarking for Candidate Item Matctching." class=btn href=https://openbenchmark.github.io/candidate-matching>Open-Match-Benchmark</a>
-</div>
+    <div id="buttons" style="opacity: 1">
+
+        <a title="Open Benchmarking for CTR Prediction." class=btn href=https://openbenchmark.github.io/ctr-prediction>CTR Prediction</a>
+        <a title="Open Benchmarking for Candidate Item Matctching." class=btn href=https://openbenchmark.github.io/candidate-matching>Candidate Item Matching</a>
+    </div>
 </main>
 
+</section>
 
 <footer>
 <div class="info"><p class="copyright">Towards Open Benchmarking for Recommender Systems<br>© 2021 BARS
