--- a/ctr-prediction/leaderboard/criteo_x1_001.html
+++ b/ctr-prediction/leaderboard/criteo_x1_001.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS | Open-CTR-Benchmark</title>
+    <title>BARS-CTR-Prediction | criteo_x1_001</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +39,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on criteo_x0_001</h2>
+            <h2 class="mb-4">Benchmarking on criteo_x1_001</h2>
 
             <!-- Add tables and charts -->
             <div id="chart1"></div>
@@ -60,22 +60,18 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
     <script src="../js/tablecharts.js"></script>
-    <!-- <script type="text/javascript">
-        $(document).ready(createTableChart('table1', 'chart1',
-            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/criteo_x0_001.json"));
-    </script> -->
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/xue-pai/Open-CTR-Benchmark/results/criteo_x0_001.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/criteo_x1_001.json"));
     </script>
     <script type="text/javascript" src="../js/nav.js"></script>
 
     <script type="text/javascript">
-        add_nav("criteo_x0_001");
+        add_nav("criteo_x1_001");
 
         $(document).ready(function () {
             $("#fork-btn").click(function () {
-                location.href = "https://github.com/xue-pai/Open-CTR-Benchmark";
+                location.href = "https://github.com/xue-pai/BARS";
             });
         });
     </script>
