--- a/ctr-prediction/leaderboard/kkbox_x1.html
+++ b/ctr-prediction/leaderboard/kkbox_x1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR-Prediction | kkbox_x1_001</title>
+    <title>BARS-CTR-Prediction | kkbox_x1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -32,7 +32,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on kkbox_x1_001</h2>
+            <h2 class="mb-4">Benchmarking on kkbox_x1</h2>
 
             <!-- Add tables and charts -->
             <div id="chart1"></div>
@@ -44,7 +44,7 @@
 
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav("kkbox_x1_001");
+        add_nav("kkbox_x1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
