--- a/ctr-prediction/leaderboard/avazu_x1.html
+++ b/ctr-prediction/leaderboard/avazu_x1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR-Prediction | microvideo1.7m_x1_001</title>
+    <title>BARS-CTR-Prediction | avazu_x1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,15 +26,14 @@
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
-
-                <!-- <div class="mb-5">
+<!--                 <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
                 </div> -->
             </div>
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on microvideo1.7m_x1_001</h2>
+            <h2 class="mb-4">Benchmarking on avazu_x1</h2>
 
             <!-- Add tables and charts -->
             <div id="chart1"></div>
@@ -43,10 +42,9 @@
 
         </div>
     </div>
-
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav("microvideo1.7m_x1_001");
+        add_nav("avazu_x1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
@@ -62,9 +60,8 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/microvideo1.7m_x1_001.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/avazu_x1_001.json"));
     </script>
-
 </body>
 
 </html>
