--- a/BARS/index.html
+++ b/BARS/index.html
@@ -17,7 +17,7 @@
 
 <body class="language-unknown">
 <header><nav><a id="brand" href="https://openbenchmark.github.io/BARS">
-<span class="name">Welcome</span></a>
+<span class="name">OPEN BENCHMARK</span></a>
 <div id="header-links">
 </div></nav></header>
 
