--- a/ctr-prediction/leaderboard/avazu_x4_001.html
+++ b/ctr-prediction/leaderboard/avazu_x4_001.html
@@ -27,10 +27,11 @@
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
 
                 </ul>
-
-                <!-- <div class="mb-5">
-                    <h3 class="h6">Join Wechat Group</h3>
-                </div> -->
+                <div class="mb-5">
+                    <img src="../../BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <div style="padding-top:2px">
+                    <div style="font-size:14px">Wechat Group</div></div>
+                </div>
             </div>
         </nav>
 
