--- a/ctr-prediction/leaderboard/avazu_x1.html
+++ b/ctr-prediction/leaderboard/avazu_x1.html
@@ -26,9 +26,11 @@
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
-<!--                 <div class="mb-5">
-                    <h3 class="h6">Join Wechat Group</h3>
-                </div> -->
+                <div class="mb-5">
+                    <img src="../../BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <div style="padding-top:2px">
+                    <div style="font-size:14px">Wechat Group</div></div>
+                </div>
             </div>
         </nav>
 
@@ -60,7 +62,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/avazu_x1_001.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/avazu_x1.json"));
     </script>
 </body>
 
