--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS | Open-Match-Benchmark</title>
+    <title>BARS-Candidate-Matching</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,20 +26,16 @@
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
-
-                <div class='mb-5'>
-                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2"
-                        data-loading-text="Loading..." type="button"> Fork Github Repo
-                    </button>
+                <div class="mb-5">
+                    <img src="../BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <div style="padding-top:2px">
+                    <div style="font-size:14px">Wechat Group</div></div>
                 </div>
-                <!-- <div class="mb-5">
-                    <h3 class="h6">Join Wechat Group</h3>
-                </div> -->
             </div>
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Open-Match-Benchmark</h2>
+            <h2 class="mb-4">BARS-Candidate-Matching</h2>
             <p><strong>Congratulations! You have found BARS, an awesome project aimed for open
                     <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
             <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching
