--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -66,22 +66,16 @@
             </p>
         </div>
     </div>
+    <script type="text/javascript" src="./js/nav.js"></script>
+    <script type="text/javascript">
+        add_nav(page_name="BARS-Candidate-Matching");
+    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
         src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/popper.js"></script>
     <script
         src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/main.js"></script>
-    <script type="text/javascript" src="./js/nav.js"></script>
-    <script type="text/javascript">
-        add_nav(page_name = "Open-Match-Benchmark");
-        $(document).ready(function () {
-            $("#fork-btn").click(function () {
-                location.href = "https://github.com/xue-pai/Open-Match-Benchmark";
-            });
-        });
-    </script>
-
 </body>
 
 </html>
