--- a/ctr-prediction/papers.html
+++ b/ctr-prediction/papers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS | Open-CTR-Benchmark</title>
+    <title>BARS-CTR-Prediction | Papers</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,9 +35,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">A List of CTR Prediction Models</h2>
-            <p>Welcome to the open benchmarking site for CTR prediction.</p>
-
+            <h2 class="mb-4">A List of Papers on CTR Prediction</h2>
+            <!-- <p>Welcome to the open benchmarking site for CTR prediction.</p> -->
             <!-- Add data table -->
             <table id="table1" class="table table-bordered">
             </table>
