--- a/ctr-prediction/leaderboard/avazu_x1.html
+++ b/ctr-prediction/leaderboard/avazu_x1.html
@@ -35,11 +35,11 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on avazu_x1</h2>
+            <h2 class="mb-4">Benchmarking on <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu/README.md#Avazu_x1">avazu_x1</a></h2>
 
             <!-- Add tables and charts -->
             <div id="chart1"></div>
-            <p><br></p>
+            <p><br>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</p>
             <table id="table1" class="table table-bordered"></table>
 
         </div>
