--- a/ctr-prediction/leaderboard/criteo_x4_002.html
+++ b/ctr-prediction/leaderboard/criteo_x4_002.html
@@ -33,11 +33,11 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on criteo_x4_002</h2>
-
+            <h2 class="mb-4">Benchmarking on <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Criteo/README.md#Criteo_x4_002">criteo_x4_002</a></h2>
+            <p>See also other available dataset settings: <a href="./criteo_x4_001.html">criteo_x4_001</a>. Note that criteo_x4_001 is the default setting to use.</p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
-            <p><br></p>
+            <p><br>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</p>
             <table id="table1" class="table table-bordered"></table>
 
         </div>
