--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -39,7 +39,7 @@
 
             <ul>
                 <li><a href="./papers.html">A curated list of CTR prediction models</a> which have been tagged into different topics, such as feature-interactions, user-behavior-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
-                <li><a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/README.md#Benchmark-Datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data partitions of each dataset.</li>
+                <li><a href="https://github.com/openbenchmark/BARS/tree/master/ctr_prediction/datasets#benchmark-datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data partitions of each dataset.</li>
                 <li><a href="https://github.com/xue-pai/FuxiCTR", target="_blank">An open-source library for CTR prediction</a> with stunning features in configurablity, tunablity, and reproduciblity.</li>
                 <li><a href="https://openbenchmark.github.io/ctr-prediction/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking code.</li>
             </ul>
