--- a/ctr-prediction/leaderboard/avazu_x4_002.html
+++ b/ctr-prediction/leaderboard/avazu_x4_002.html
@@ -36,7 +36,7 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Benchmarking on <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu/README.md#Avazu_x4_002">avazu_x4_002</a></h2>
-
+            <p>See also other available dataset settings: <a href="./avazu_x4_001.html">avazu_x4_001</a>. Note that avazu_x4_001 is the default setting to use.</p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</p>
