--- a/BARS/index.html
+++ b/BARS/index.html
@@ -48,7 +48,7 @@
                         <li> <strong>Reproducing steps</strong>: The core of BARS is to ensure reproducibility of each benchmarking result through detailed description of reproducing steps, which allows anyone in the community to easily reproduce the results.
                         </li>
 
-                        <li> <strong>Updatable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, implement new models, update new benchmarking results, or revise existing numbers through a pull request on Github. The contributor will be marked honorably along with the benchmark accordingly.
+                        <li> <strong>Maintainable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, implement new models, update new benchmarking results, or revise existing numbers through a pull request on Github. The contributor will be marked honorably along with the contributions accordingly.
                         </li>
                     </ul>
                     <br>
