--- a/ctr-prediction/leaderboard/microvideo1.7m_x1.html
+++ b/ctr-prediction/leaderboard/microvideo1.7m_x1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR-Prediction | microvideo1.7m_x1</title>
+    <title>BARS-CTR Benchmark | Microvideo1.7m_x1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
