--- a/ctr-prediction/leaderboard/avazu_x1.html
+++ b/ctr-prediction/leaderboard/avazu_x1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR-Prediction | avazu_x1</title>
+    <title>BARS-CTR Benchmark | Avazu_x1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,11 +35,11 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu/README.md#Avazu_x1">avazu_x1</a></h2>
-
+            <h2 class="mb-4">Benchmarking on avazu_x1</a></h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x1">avazu_x1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
-            <p><br>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</p>
+            <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
             <table id="table1" class="table table-bordered"></table>
 
         </div>
