--- a/ctr-prediction/leaderboard/avazu_x4_001.html
+++ b/ctr-prediction/leaderboard/avazu_x4_001.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR-Prediction | avazu_x4_001</title>
+    <title>BARS-CTR Benchmark | Avazu_x4_001</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,11 +36,16 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu/README.md#Avazu_x4_001">avazu_x4_001</a></h2>
-            <p>See also other available dataset settings: <a href="./avazu_x4_002.html">avazu_x4_002</a>. Note that avazu_x4_001 is the default setting to use.</p>
+            <h2 class="mb-4">Benchmarking on avazu_x4_001</a></h2>
+            There are two alternative benchmark protocols: 
+            <ul>
+                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_001">avazu_x4_001</a> (recommended setting)</li>
+                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_002">avazu_x4_002</a> and <a href="./avazu_x4_002.html">benchmarking results on avazu_x4_002</a></li>
+            </ul>
+
             <!-- Add tables and charts -->
             <div id="chart1"></div>
-            <p><br>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</p>
+            <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
             <table id="table1" class="table table-bordered"></table>
 
         </div>
