--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR-Prediction</title>
+    <title>BARS-CTR Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,7 +33,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BARS-CTR-Prediction</h2>
+            <h2 class="mb-4">BARS-CTR</h2>
             <p><strong>BARS is an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
             <p>Click-through rate (CTR) prediction (or user response prediction in general) is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
 
