--- a/ctr-prediction/leaderboard/criteo_x4_001.html
+++ b/ctr-prediction/leaderboard/criteo_x4_001.html
@@ -36,7 +36,7 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Benchmarking on criteo_x4_001</a></h2>
-            There are two alternative benchmark protocols: 
+            There are two alternative benchmark protocols for criteo_x4: 
             <ul>
                 <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Criteo#Criteo_x4_001">criteo_x4_001</a> (recommended setting)</li>
                 <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Criteo#Criteo_x4_002">criteo_x4_002</a> and <a href="./criteo_x4_002.html">benchmarking results on criteo_x4_002</a></li>
