--- a/ctr-prediction/leaderboard/avazu_x4_002.html
+++ b/ctr-prediction/leaderboard/avazu_x4_002.html
@@ -36,7 +36,7 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Benchmarking on avazu_x4_002</a></h2>
-            There are two alternative benchmark protocols: 
+            There are two alternative benchmark protocolsc for avazu_x4: 
             <ul>
                 <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_001">avazu_x4_001</a> and <a href="./avazu_x4_001.html">benchmarking results on avazu_x4_001</a></li>
                 <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_002">avazu_x4_002</a></li>
