Update candidate matching

--- a/candidate-matching/leaderboard/gowalla_x1.html
+++ b/candidate-matching/leaderboard/gowalla_x1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-Candidate-Matching | amazonbooks_x0</title>
+    <title>BARS-Matching Benchmark | Gowalla_x1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,24 +25,27 @@
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
-                    <!-- <div class="mb-5">
-                    <h3 class="h6">Join Wechat Group</h3>
-                </div> -->
+                <div class="mb-5">
+                    <img src="../../BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <div style="padding-top:2px">
+                    <div style="font-size:14px">Wechat Group</div></div>
+                </div>
             </div>
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on amazonbooks_x0</h2>
+            <h2 class="mb-4">Benchmarking on gowalla_x1</h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets/Gowalla#gowalla_x1">gowalla_x1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
-            <p><br></p>
+            <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
             <table id="table1" class="table table-bordered"></table>
 
         </div>
     </div>
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav(page_name="amazonbooks_x0");
+        add_nav(page_name="gowalla_x1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
@@ -58,7 +61,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/amazonbooks_x0.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/gowalla_x1.json"));
     </script>
 
 </body>
