--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-Candidate-Matching</title>
+    <title>BARS-Matching Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,8 +24,7 @@
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
-                </ul>
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
                 <div class="mb-5">
                     <img src="../BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
@@ -35,40 +34,35 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BARS-Candidate-Matching</h2>
-            <p><strong>Congratulations! You have found BARS, an awesome project aimed for open
-                    <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
+            <h2 class="mb-4">BARS-Matching</h2>
+            <p><strong>BARS is an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
             <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching
-                belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates
-                out of the entire item corpus. Collaborative
-                filtering is also one of the most representative methods used for candidate item matching. To drive
-                research in this direction, the BARS project builds an open benchmark for candidate item matching, which
-                consists of:</p>
+                is a matching task that is designed to efficiently retrieve hundreds of item candidates
+                out of the entire item corpus. Representative methods of candidate item matching include collaborative filtering, two-tower models, autoencoder-based models, sequential models, graph-based models, etc. To drive research in this direction, the BARS project aims to build an open benchmark for candidate item matching, which consists of:</p>
 
             <ul>
-                <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been
-                    tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower
-                    models, etc.</li>
+                <li>A curated list of <a href="./models.html">models on candidate item matching</a>, which have been
+                    tagged into different categories, such as CF, autoencoders, two-tower
+                    models, GNNs, and so on.</li>
                 <li>A collection of <a
-                        href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" ,
+                        href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets" ,
                         target="_blank">public datasets for research on candidate item matching</a>, and unique dataset
                     IDs to track specific data splits
                     for each dataset.</li>
-                <li>A collection of <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" ,
-                        target="_blank">open-source toolkits for candidate item matching</a>.</li>
-                <li>Most importantly, the most comprehensive <a
+                <li>A collection of <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/libs" ,
+                        target="_blank">open-source libraries for candidate item matching</a>.</li>
+                <li>Most importantly, <a
                         href="https://openbenchmark.github.io/candidate-matching/leaderboard/amazonbooks_x0_001.html" ,
-                        target="_blank">benchmarking results on various dataset IDs and settings</a>. For each result,
-                    the detailed reproducing step is provided along with the open-source benchmarking code.</li>
+                        target="_blank">the most comprehensive benchmarking results</a> on various datasets and settings. For each result, the detailed reproducing step is recorded along with the open-source benchmarking code.</li>
             </ul>
 
-            <p>The ultimate goal of BARS is to drive reproducible research in the development of recommender systems.
+            <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.
             </p>
         </div>
     </div>
     <script type="text/javascript" src="./js/nav.js"></script>
     <script type="text/javascript">
-        add_nav(page_name="BARS-Candidate-Matching");
+        add_nav(page_name="BARS-Matching");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
