--- a/candidate-matching/papers.html
+++ b/candidate-matching/papers.html
@@ -24,22 +24,20 @@
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
-                </ul>
-
-                <!-- <div class="mb-5">
-                    <h3 class="h6">Join Wechat Group</h3>
-                </div> -->
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
+                <div class="mb-5">
+                    <img src="../BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <div style="padding-top:2px">
+                    <div style="font-size:14px">Wechat Group</div></div>
+                </div>
             </div>
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">A List of Papers on Candidate Item Matching</h2>
-
             <!-- Add data table -->
             <table id="table1" class="table table-bordered">
             </table>
-
         </div>
     </div>
     <script type="text/javascript" src="./js/nav.js"></script>
